--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,9 @@ django-crispy-forms = "==1.9.2"
 psycopg2-binary = "==2.8.5"
 whitenoise = "==5.1.0"
 gunicorn = "==19.9.0"
+cloudinary = "*"
+dj3-cloudinary-storage = "*"
+python-magic = "*"
 
 [dev-packages]
 
